fix wrong shadow color in dark mode

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ root
     --middlegray: #808080;
     --darkgray: #3c3c3c;
     --black: #0f0f0f;
+    --shadowgray: #d3d3d3;
 }
 
 :root.dark {
@@ -23,6 +24,7 @@ root
     --middlegray: #000000;
     --darkgray: #d3d3d3;
     --black: #f0f0f0;
+    --shadowgray: #0f0f0f;
 }
 
 /*
@@ -684,7 +686,7 @@ section software
     margin-left: 5px;
     margin-right: 5px;
     margin-bottom: 20px;
-    box-shadow: 0px 3px 5px 1px var(--lightgray);
+    box-shadow: 0px 3px 5px 1px var(--shadowgray);
 }
 
 .caption-software {
